syntax = "proto3";

package role;

option go_package = "./pb";

// 角色信息
message RoleInfo {
  int64 id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
  int64 status = 5;
  int64 created_at = 6;
}

// 创建角色请求
message CreateRoleReq {
  string name = 1;
  string code = 2;
  string description = 3;
}

// 创建角色响应
message CreateRoleResp {
  int64 id = 1;
}

// 获取角色请求
message GetRoleReq {
  int64 id = 1;
}

// 获取角色响应
message GetRoleResp {
  RoleInfo role = 1;
}

// 更新角色请求
message UpdateRoleReq {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 status = 4;
}

// 更新角色响应
message UpdateRoleResp {
  bool success = 1;
}

// 删除角色请求
message DeleteRoleReq {
  int64 id = 1;
}

// 删除角色响应
message DeleteRoleResp {
  bool success = 1;
}

// 角色列表请求
message ListRoleReq {
  int64 page = 1;
  int64 page_size = 2;
}

// 角色列表响应
message ListRoleResp {
  repeated RoleInfo roles = 1;
  int64 total = 2;
}

// 分配角色请求
message AssignRoleReq {
  int64 user_id = 1;
  repeated int64 role_ids = 2;
}

// 分配角色响应
message AssignRoleResp {
  bool success = 1;
}

// 获取用户角色请求
message GetUserRolesReq {
  int64 user_id = 1;
}

// 获取用户角色响应
message GetUserRolesResp {
  repeated RoleInfo roles = 1;
}

// 角色服务
service Role {
  // 创建角色
  rpc CreateRole(CreateRoleReq) returns (CreateRoleResp);
  // 获取角色
  rpc GetRole(GetRoleReq) returns (GetRoleResp);
  // 更新角色
  rpc UpdateRole(UpdateRoleReq) returns (UpdateRoleResp);
  // 删除角色
  rpc DeleteRole(DeleteRoleReq) returns (DeleteRoleResp);
  // 角色列表
  rpc ListRole(ListRoleReq) returns (ListRoleResp);
  // 分配角色
  rpc AssignRole(AssignRoleReq) returns (AssignRoleResp);
  // 获取用户角色
  rpc GetUserRoles(GetUserRolesReq) returns (GetUserRolesResp);
}
